--- a/SignURLs/src/plugin.yml
+++ b/SignURLs/src/plugin.yml
@@ -19,6 +19,8 @@ permissions:
     description: Access to the REMOVE sub-command.
   signurls.command.change:
     description: Access to the CHANGE sub-command.
+  signurls.command.list:
+    description: Access to the LIST sub-command.
   signurls.command.admin:
     description: Access to the ADMIN sub-command.
   signurls.use:
