--- a/SignURLs/pom.xml
+++ b/SignURLs/pom.xml
@@ -48,6 +48,7 @@
 				<directory>src</directory>
 				<includes>
 					<include>plugin.yml</include>
+					<incudee>config.yml</incudee>
 				</includes>
 				<filtering>true</filtering>
 			</resource>
